--- a/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/hotel_detail.css
+++ b/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/hotel_detail.css
@@ -18,7 +18,7 @@
     min-height: 100%;
     min-width: 100%;
     object-fit: cover;
-    cursor: pointer;
+    /* cursor: pointer; */
     filter: grayscale(80%);
     transition: .35s linear;
   }
