--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/about_us.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/about_us.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <hr class="hr-text" data-content="lookingtostay">
-<h1 class="center">📝 Contact Us</h1>
+<h1 class="center">Contact Us</h1>
 <div class="contact-window">
     <div class="center">
         <p class="uni">&#9742;</p>
