--- a/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/hotel_detail.css
+++ b/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/hotel_detail.css
@@ -218,6 +218,8 @@ input:checked ~ label, label:hover ~ label{
 .property-review h4 img {
   max-height: 5rem;
   min-height: 5rem;
+  max-width: 5rem;
+  min-width: 5rem;
   float: left;
   margin-right: 0.5rem;
   border-radius: 3rem;
@@ -226,6 +228,7 @@ input:checked ~ label, label:hover ~ label{
 
 .property-review p {
   margin-left: 7rem;
+  min-height: 1.5rem;
 }
 
 .review-window {
